package org.example.fashionstoresystem.repository;

import org.example.fashionstoresystem.entity.jpa.OrderHistory;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

@Repository
public interface OrderHistoryRepository extends JpaRepository<OrderHistory, Long> {
}
