@startuml
title Class Diagram: Order Management (UC26)

' Controller
class AdminOrderController {
    - orderManagementService : OrderManagementService
    + getAllOrders(status: OrderStatus, startDate: Date, endDate: Date, pageable: Pageable) : ResponseEntity<Page<OrderSummaryResponseDTO>>
    + getOrderDetail(orderId: Long) : ResponseEntity<OrderDetailResponseDTO>
    + updateOrderStatus(orderId: Long, status: OrderStatus) : ResponseEntity<MessageResponseDTO>
    + updateOrderItemStatus(itemId: Long, status: OrderStatus) : ResponseEntity<Void>
    + updateRefundStatus(itemId: Long, status: RefundStatus) : ResponseEntity<Void>
}

' Service
interface OrderManagementService <<interface>> {
    + getAllOrders(status: OrderStatus, startDate: Date, endDate: Date, pageable: Pageable) : Page<OrderSummaryResponseDTO>
    + getOrderDetail(orderId: Long) : OrderDetailResponseDTO
    + updateOrderStatus(orderId: Long, status: OrderStatus) : MessageResponseDTO
    + updateOrderItemStatus(itemId: Long, status: OrderStatus) : void
    + updateRefundStatus(itemId: Long, status: RefundStatus) : void
}

class OrderManagementServiceImpl {
    - orderRepository : OrderRepository
    - orderItemRepository : OrderItemRepository
    - orderHistoryRepository : OrderHistoryRepository
    + getAllOrders(status: OrderStatus, startDate: Date, endDate: Date, pageable: Pageable) : Page<OrderSummaryResponseDTO>
    + getOrderDetail(orderId: Long) : OrderDetailResponseDTO
    + updateOrderStatus(orderId: Long, status: OrderStatus) : MessageResponseDTO
    + updateOrderItemStatus(itemId: Long, status: OrderStatus) : void
    + updateRefundStatus(itemId: Long, status: RefundStatus) : void
    - checkStatusTransition(currentStatus: OrderStatus, newStatus: OrderStatus) : void
}

' Repository
interface OrderRepository <<interface>> {
    + findFiltered(status: OrderStatus, startDate: Date, endDate: Date, pageable: Pageable) : Page<Order>
    + findById(id: Long) : Optional<Order>
}

interface OrderItemRepository <<interface>> {
    + findById(id: Long) : Optional<OrderItem>
    + save(entity: S) : <S extends T> S
}

interface OrderHistoryRepository <<interface>> {
    + save(entity: S) : <S extends T> S
}

' DTO

class MessageResponseDTO {
    - message : String
}

class OrderSummaryResponseDTO {
    - orderId : Long
    - orderDate : Date
    - totalAmount : Double
    - status : OrderStatus
}

class OrderDetailResponseDTO {
    - orderId : Long
    - status : OrderStatus
    - items : List<OrderItemDTO>
}

' Entity

class Order {
    - id : Long
    - totalAmount : Double
    - orderDate : Date
    - status : OrderStatus
}

class OrderItem {
    - id : Long
    - status : OrderStatus
    - refundStatus : RefundStatus
    - cancellationReason : String
}

class OrderHistory {
    - id : Long
    - orderItem : OrderItem
    - previousStatus : OrderStatus
    - newStatus : OrderStatus
    - changeDate : Date
}

Order "1" *-- "1..*" OrderItem : contains >
OrderItem "1" *-- "0..*" OrderHistory : tracks >

' Relationships

' Implementation
OrderManagementServiceImpl ..|> OrderManagementService

' Dependency Injection
AdminOrderController --> OrderManagementService : - orderManagementService
OrderManagementServiceImpl --> OrderRepository : - orderRepository
OrderManagementServiceImpl --> OrderItemRepository : - orderItemRepository
OrderManagementServiceImpl --> OrderHistoryRepository : - orderHistoryRepository

' Object Usage
AdminOrderController ..> OrderSummaryResponseDTO : <<returns>>
AdminOrderController ..> OrderDetailResponseDTO : <<returns>>
AdminOrderController ..> MessageResponseDTO : <<returns>>
OrderManagementServiceImpl ..> Order : <<uses>>
OrderRepository ..> Order : <<manages>>

OrderManagementServiceImpl ..> OrderItem : <<uses>>
OrderItemRepository ..> OrderItem : <<manages>>

OrderManagementServiceImpl ..> OrderHistory : <<creates>>
OrderHistoryRepository ..> OrderHistory : <<manages>>

@enduml